# msgpeek

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
src/: msgpeek.c
